--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "express-ec2",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -12,5 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/russelldempster/node-express-ec2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/russelldempster/node-express-ec2/issues"
+  },
+  "homepage": "https://github.com/russelldempster/node-express-ec2#readme",
+  "description": ""
 }
